# llm-gateway

./: .gitignore  README.md  client-guide.md  llm-gateway-load.py  llm-gateway-test.py  resource-list.md
admin-api/: Dockerfile  pyproject.toml
admin-api/src/app/: main.py
admin-api/src/app/core/: audit.py  auth.py  cache_invalidation.py  config.py  db.py  encryption.py  exceptions.py  oidc_verifier.py  redis_client.py  usage_filters.py
admin-api/src/app/models/: audit.py  auth.py  base.py  budget.py  model.py  routing.py  usage.py
admin-api/src/app/repositories/: analytics_repository.py  audit_repository.py  budget_repository.py  key_repository.py  model_repository.py  service_token_repository.py  user_allowed_client_repository.py  user_allowed_model_repository.py  user_repository.py
admin-api/src/app/routers/: analytics.py  auth_oidc.py  budgets.py  chat_agent.py  cli.py  dashboard.py  internal.py  keys.py  (+8 more)
admin-api/tests/integration/: conftest.py  test_budget_management.py  test_cli_auth.py  test_key_management.py  test_model_management.py  test_rbac.py  test_user_list.py
admin-api/tests/unit/: conftest.py  test_audit_logger.py  test_audit_queue.py  test_budget_service.py  test_budget_service_downgrade_cache_key.py  test_cache_invalidation.py  test_cli_service.py  test_cognito_sync_per_entity.py  test_encryption.py  test_key_repository.py  test_key_service.py  test_model_service.py  test_oidc_group_parsing.py  test_pricing_sync_service.py  test_rate_limit_repository.py  test_rate_limit_service.py  test_team_allowed_model_service.py  test_user_repository_list_users.py  test_user_team_service.py
admin-chat-agent/: .dockerignore  Dockerfile  README.md  pyproject.toml
admin-chat-agent/config/: golden_examples.yaml  schema_whitelist.yaml
admin-chat-agent/lambdas/: build-lambdas.sh
admin-chat-agent/lambdas/get_schema/: lambda_function.py
admin-chat-agent/lambdas/query_db/: lambda_function.py  requirements.txt  sql_guard.py
admin-chat-agent/lambdas/seed_dev_data/: lambda_function.py
admin-chat-agent/scripts/: build_schema_embeddings.py  create_code_interpreter.py
admin-chat-agent/src/agent/: __init__.py  candidate_select.py  envelopes.py  fewshot.py  fewshot_bank.json  main.py  sql_struct.py
admin-chat-agent/tests/: README.md  conftest.py
admin-chat-agent/tests/eval/: __init__.py  agent_client.py  critic_compare.py  critic_dataset.yaml  run_golden.py  scoring.py
admin-chat-agent/tests/unit/: test_answer_auditor.py  test_auto_validate.py  test_candidate_select.py  test_chart_spec.py  test_critic_compare.py  test_cross_family.py  test_envelopes.py  test_fewshot.py  test_golden_static.py  test_heartbeat_stream.py  test_parse_agent_json.py  test_reconcile_numbers.py  test_reduce_runs.py  test_scoring.py  test_sql_guard.py
cost-recorder-worker/: Dockerfile  pyproject.toml
cost-recorder-worker/src/worker/: batch_flusher.py  config.py  daily_aggregator.py  db.py  main.py  redis_client.py  stream_consumer.py  worker.py
cost-recorder-worker/tests/unit/: test_batch_flusher.py  test_ttft.py
gateway-cli/: package.sh  pyproject.toml
gateway-cli/scripts/: restore_redis_budget.py
gateway-cli/src/api_key_helper/: config.py  main.py  sso.py  vk_client.py
gateway-cli/src/cli/: config.py  disable.py  login.py  main.py  managed.py  setup.py  status.py
gateway-cli/src/gateway_cli_oidc/: __init__.py  oidc_client.py
gateway-cli/src/statusline/: config.py  formatter.py  main.py  usage_client.py
gateway-cli/tests/integration/: test_setup_edge_cases.py  test_setup_flow.py
gateway-cli/tests/unit/: test_api_key_helper_main.py  test_api_key_helper_sso.py  test_api_key_helper_vk_client.py  test_backup.py  test_bedrock_config.py  test_config.py  test_config_rw.py  test_detector.py  test_openai_config.py  test_otel_config.py  test_statusline_formatter.py  test_statusline_main.py  test_statusline_usage_client.py
gateway-proxy/: Dockerfile  pyproject.toml
gateway-proxy/src/app/: config.py  db.py  main.py  redis_client.py
gateway-proxy/tests/: conftest.py  test_client_id_middleware.py  test_middleware_order.py
gateway-proxy/tests/integration/: test_bedrock_e2e.py  test_bedrock_real.py  test_count_tokens_endpoint.py  test_fallback_loop.py  test_health.py  test_models_endpoint.py  test_openai_compat_e2e.py  test_rate_limit_cluster.py  test_router_service_db.py  test_team_budget_enforcement.py
gateway-proxy/tests/middleware/: test_downgrade_middleware.py
gateway-proxy/tests/services/: conftest.py  test_circuit_breaker.py  test_circuit_breaker_lua.py  test_cost_recorder_fallback_attr.py  test_downgrade_chain.py  test_downgrade_loader.py  test_fallback_resolver.py
gateway-proxy/tests/unit/: test_auth_service.py  test_bedrock_account_client.py  test_bedrock_adapter.py  test_budget_middleware.py  test_budget_service.py  test_circuit_breaker.py  test_client_authz.py  test_client_identifier.py  test_cost_recorder.py  test_cost_stream_spool.py  test_count_tokens_router.py  test_degradation_manager.py  test_event_detector_bounded.py  test_health_checker.py  test_lua_scripts.py  test_main_wiring_mantle.py  test_mantle_adapter.py  test_mantle_credentials.py  test_mantle_openai_adapter.py  test_messages_streaming.py  test_openai_streaming.py  test_openmodel_adapter.py  test_rate_limit_config_loader.py  test_rate_limit_enforcement_cost.py  test_rate_limit_fallback.py  test_rate_limit_service.py  test_readiness_probe.py  test_redis_client.py  test_responses_streaming.py  test_router_service.py  test_routing_profile_loader.py  test_streaming.py  test_streaming_ttft.py  test_trace_extractor.py  test_web_search_loop.py
notification-worker/: .dockerignore  Dockerfile  pyproject.toml
notification-worker/src/worker/: config.py  db.py  main.py  redis_client.py  worker.py
notification-worker/tests/integration/: conftest.py  test_event_flow.py
notification-worker/tests/unit/: test_channel_listener.py  test_config_cache.py  test_events.py  test_notification_buffer.py  test_recipient_resolver.py  test_retry_executor.py  test_task_supervisor.py  test_template_engine.py
(+436 files in other folders)
