[project]
name = "llm-gateway-admin-api"
version = "0.1.0"
description = "LLM Gateway - Admin API (Control Plane)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.21.0",
    "apscheduler>=3.10.0",
    "boto3>=1.35.0",
    # Hardened XML parser (replaces stdlib xml.etree for untrusted input).
    # 외부 입력 XML 파싱용 강화 파서 (stdlib xml.etree 대체). bandit B314 대응.
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "testcontainers[postgres,redis]>=4.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
