[project]
name = "cost-recorder-worker"
version = "0.1.0"
description = "LLM Gateway — Cost Recorder Worker (Redis Stream → DB batch flusher + daily aggregator)"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "apscheduler>=3.10",
    "structlog>=24.4",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast unit tests with mocks (no DB/Redis required)",
    "integration: integration tests requiring Postgres + Redis",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
