[project]
name = "gateway-proxy"
version = "0.1.0"
description = "LLM Gateway — Data Plane (Gateway Proxy)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "boto3>=1.35",
    "botocore>=1.35",
    # Mantle bearer token minting (cowork Opus + codex GPT-5.5). SigV4→단기 bearer.
    # Lazy-imported in services/mantle_credentials.py; 없으면 Mantle 호출이 502.
    "aws-bedrock-token-generator>=1.0",
    "structlog>=24.4",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt[crypto]>=2.9",
    "cryptography>=43.0",
    "python-multipart>=0.0.12",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "fakeredis>=2.36.2",
    "lupa>=2.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast unit tests with mocks (no DB/Redis required)",
    "integration: integration tests requiring Postgres + Redis",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
