[project]
name = "notification-worker"
version = "0.1.0"
description = "LLM Gateway — Notification Worker (Event Processing)"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "jinja2>=3.1",
    "structlog>=24.4",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
ses = [
    "boto3>=1.35",
    "botocore>=1.35",
]
smtp = [
    "aiosmtplib>=3.0",
]
http = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
